--- a/public/styles.css
+++ b/public/styles.css
@@ -1,46 +1,61 @@
 body * {
-    margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-    line-height: 1;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  line-height: 1;
+  box-sizing: border-box;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 body {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: aliceblue;
-    display: flex;
-    /* align-items: center; */
-    justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: aliceblue;
+  display: flex;
+  justify-content: center;
 }
 
 .grid-container {
-    width: 70%;
-    height: 70%;
-    position: absolute;
-    display: grid;
-    top: 5%;
-    /* border: 1px solid black; */
-    grid-template-columns: repeat(8, 12.5%);
+  width: 70%;
+  height: 70%;
+  position: absolute;
+  display: grid;
+  top: 5%;
+  /* border: 1px solid black; */
+  grid-template-columns: repeat(8, 12.5%);
 }
 
 .grid-square {
-    /* width: 50%;
+  /* width: 50%;
     height: 50%;
     position: absolute; */
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
 .message-container {
-    height: 10%;
-    width: 50%;
-    position: absolute;
-    bottom: 5%;
-    border: 1px solid black;
+  height: 10%;
+  width: 50%;
+  position: absolute;
+  bottom: 5%;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.message-container .text-inner {
+  /* text-align: center; */
+  font-size: 24px;
+}
+
+.title-container {
+  font-size: 24px;
+  top: 1%;
+  position: absolute;
 }
